# hsseccomp

./: .haskell-ci  .travis.yml  hsseccomp.cabal  stack-lts-12.yaml
cbits/: macros.c  seccomp_rule_add.c
lib/System/Linux/Seccomp/Types/: Internal.hsc
scripts/: stack-test.sh
src/System/Linux/: Seccomp.hsc
src/System/Linux/Seccomp/: Types.hsc
test-other/: doctest-tests.hs
tests/: tests.hs
