
name:           hsseccomp
version:        0.2.0.1
synopsis:       Haskell bindings to libseccomp
description:    Bindings to libseccomp. See "System.Linux.Seccomp" for docs.
                .
                Requires header files for libseccomp to be installed.
                (On Debian-based systems, this can be done with
                `sudo apt install libseccomp-dev`.
license:        LGPL
license-file:   LICENSE
author:         Tom Hunger, Cornelius Diekmann
maintainer:     tehunger@gmail.com
category:       System
build-type:     Simple
cabal-version:  >=1.10
bug-reports:    https://github.com/teh/hsseccomp/issues
tested-with:
    GHC==8.4.3
  , GHC==8.2.2

source-repository head
  type: git
  location: https://github.com/teh/hsseccomp

library
  exposed-modules:
      System.Linux.Seccomp
      System.Linux.Seccomp.Types
      System.Linux.Seccomp.Types.Internal
  build-depends:
      base >=4.8 && <5
    , unix
  hs-source-dirs:
      lib
  default-language: Haskell2010
  build-tools:
      hsc2hs
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  c-sources:
      cbits/macros.c
      cbits/seccomp_rule_add.c
  extra-libraries:
      seccomp
  pkgconfig-depends:
      libseccomp

test-suite seccomp-test
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends:
      base >=4.8 && <5
    , hsseccomp
    , tasty
    , tasty-hunit
    , unix
  hs-source-dirs:
      tests
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts


